--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,13 @@
 }
 
 .page-content {
-  color: rgb(74 2 254);
+  color: rgb(0, 0, 0);
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1.25rem;
 }
 
 body {
-  background-color: rgb(0 195 255);
+  background-color: rgb(144, 0, 255);
 }
 
 img {
